--- a/IfFoundLockScreen/Editor.xaml
+++ b/IfFoundLockScreen/Editor.xaml
@@ -35,8 +35,8 @@
             </toolkit:NavigationOutTransition.Forward>
         </toolkit:NavigationOutTransition>
     </toolkit:TransitionService.NavigationOutTransition>
-
-    <!--LayoutRoot is the root grid where all page content is placed-->
+    <ScrollViewer>
+        <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -44,21 +44,21 @@
         </Grid.RowDefinitions>
 
         <!--TitlePanel contains the name of the application and page title-->
-        <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
+        <StackPanel x:Name="TitlePanel" Grid.Row="0">
             <TextBlock x:Name="ApplicationTitle" Text="LOST PHONE SCREEN" Style="{StaticResource PhoneTextNormalStyle}"/>
-            <TextBlock x:Name="PageTitle" Text="wallpaper text" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+            <TextBlock x:Name="PageTitle" Text="wallpaper text" Style="{StaticResource PhoneTextTitle1Style}"/>
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
-        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
+        <Grid x:Name="ContentPanel" Grid.Row="1">
             <StackPanel x:Name="FieldsPanel">
-                <TextBlock x:Name="Line1" Text="Line 1" Margin="9,-7,0,0" Style="{StaticResource PhoneTextSmallStyle}"/>
+                <TextBlock x:Name="Line1" Text="Line 1"  Style="{StaticResource PhoneTextSmallStyle}"/>
                 <TextBox x:Name="Line1Text" Text="{Binding Line1, Mode=TwoWay}" MaxLength="64" />
-                <TextBlock x:Name="Line2" Text="Line 2" Margin="9,-7,0,0" Style="{StaticResource PhoneTextSmallStyle}"/>
+                <TextBlock x:Name="Line2" Text="Line 2" Style="{StaticResource PhoneTextSmallStyle}"/>
                 <TextBox x:Name="Line2Text" Text="{Binding Line2, Mode=TwoWay}" MaxLength="64" />
-                <TextBlock x:Name="Line3" Text="Line 3" Margin="9,-7,0,0" Style="{StaticResource PhoneTextSmallStyle}"/>
+                <TextBlock x:Name="Line3" Text="Line 3" Style="{StaticResource PhoneTextSmallStyle}"/>
                 <TextBox x:Name="Line3Text" Text="{Binding Line3, Mode=TwoWay}" MaxLength="64" />
-                <TextBlock x:Name="Line4" Text="Line 4" Margin="9,-7,0,0" Style="{StaticResource PhoneTextSmallStyle}"/>
+                <TextBlock x:Name="Line4" Text="Line 4" Style="{StaticResource PhoneTextSmallStyle}"/>
                 <TextBox x:Name="Line4Text" Text="{Binding Line4, Mode=TwoWay}" MaxLength="64" />
                 <toolkit:ToggleSwitch x:Name="RoomForMediaSwitch" Header="Extra room for media playing" 
                                       IsChecked="{Binding MakeRoomPooForMedia, Mode=TwoWay}" /> 
@@ -68,7 +68,8 @@
 
         </Grid>
     </Grid>
- 
+    </ScrollViewer>
+
     <!--Sample code showing usage of ApplicationBar-->
     <phone:PhoneApplicationPage.ApplicationBar>
         <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True">
