--- a/IfFoundLockScreen/Crop.xaml
+++ b/IfFoundLockScreen/Crop.xaml
@@ -44,7 +44,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="60"/>
             <RowDefinition Height="600"/>
-            <RowDefinition Height="60"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
         <!-- L, T, R, B -->
